[metadata]
name = internet_data_utilities
version = 0.0.3
author = Iain Cruickshank
author_email = icruicks@andrew.cmu.edu
description = Easy-to-use packages for getting information from internet sources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ijcruic/Internet-Data-Utilities
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    requests
    urllib3
    pafy
    beautifulsoup4
    pandas
    youtube-transcript-api
    unshortenit

[options.packages.find]
where = src